# CRM-project

./: .gitignore  pyproject.toml
app/authenticate/: admin.py  models.py  serializers.py  urls.py  views.py
app/authenticate/migrations/: 0001_initial.py  0002_alter_user_company.py
app/company/: admin.py  models.py  serializers.py  urls.py  views.py
app/company/migrations/: 0001_initial.py
app/core/: settings.py  urls.py
app/product/: admin.py  models.py  serializers.py  urls.py  views.py
app/product/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_updated_at.py  0003_alter_product_title.py  0004_alter_product_updated_at.py
app/storage/: admin.py  models.py  serializers.py  urls.py  views.py
app/storage/migrations/: 0001_initial.py
app/supplier/: admin.py  models.py  serializers.py  urls.py  views.py
app/supplier/migrations/: 0001_initial.py
app/supply/: admin.py  models.py  serializers.py  urls.py  views.py
app/supply/migrations/: 0001_initial.py
